<resources>
    <string name="app_name">MixiVivu</string>
    <string name="textShipIntro">Bạn lựa chọn du thuyền nào đi Hạ Long</string>
    <string name="textShipTour">Hơn 100 tour du thuyền đang chờ bạn</string>
    <string name="search">Tìm kiếm</string>
    <string name="inputShip">Nhập tên du thuyền</string>
    <string name="info_ship">Thông tin du thuyền</string>
    <string name="characteristic">Đặc điểm</string>
    <string name="price_room">Giá phòng</string>
    <string name="intro">Giới thiệu</string>
    <string name="evaluation">Đánh giá</string>
    <string-array name="filterDestination">
        <item>Tất cả địa điểm</item>
        <item>Vịnh Hạ Long</item>
        <item>Vịnh Lan Hạ</item>
        <item>Đảo Cát Bà</item>
    </string-array>
    <string-array name="filterPrice">
        <item>Tất cả mức giá</item>
        <item>Từ 1tr đến 3tr</item>
        <item>Từ 3tr đến 6tr</item>
        <item>Trên 6tr</item>
    </string-array>
    <string name="highlights">Đặc điểm nổi bật</string>
    <string name="intro_ship">Giới thiệu về du thuyền</string>
    <string name="room_and_price"><![CDATA[Các loại phòng & giá]]></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="input_your_name">Nhập họ và tên</string>
    <string name="input_your_review">Nhập đánh giá của bạn</string>
    <string name="send_reviews">Gửi đánh giá</string>
    <string name="text_view_review_service">Đánh giá của bạn về chất lượng dịch vụ</string>
    <string name="text_view_reviews_user">Những đánh giá của khách hàng khác</string>
    <string name="rating">Chất lượng:</string>
    <string name="zero">00</string>
    <string name="sum_price">Tổng tiền</string>
    <string name="order">Đặt ngay</string>
    <string name="select_room">Chọn phòng</string>
    <string name="order_ship">Đặt du thuyền</string>
    <string name="input_number_phone">Nhập số điện thoại</string>
    <string name="input_email">Nhập địa chỉ email</string>
    <string name="input_date">Ngày nhập phòng</string>
    <string name="input_your_request">Nhập yêu cầu của bạn</string>
    <string name="content_confirm">Xác nhận đặt phòng của bạn, chúng tôi sẽ sớm liên hệ với bạn.</string>
    <string name="confirm_booking">Xác nhận đặt phòng</string>
    <string name="complete_booking">Hoàn tất đặt phòng</string>
    <string name="no_ship">Không có du thuyền nào</string>
    <string name="into_plane">Mở cánh cửa khám phá cùng Mixivivu</string>
    <string name="intro_plane1">Mixivivu - Đặt chân lên đỉnh mây với một bước nhảy</string>
    <string name="one_way">Một chiều</string>
    <string name="round_trip">Khứ hồi</string>
    <string name="destination">Điểm đến</string>
    <string name="starting_point">Điểm đi</string>
    <string name="date_go">Ngày đi</string>
    <string name="adult">Người lớn</string>
    <string name="children">Trẻ em</string>
    <string name="baby">Em bé</string>
    <string name="search_plane">Tìm chuyến bay</string>
    <string name="no_plane">Không có chuyến bay nào</string>
    <string name="intro_blog">Hạ Long: Khám phá Sự đặc sắc và Cập nhật tin tức mới nhất</string>
    <string name="intro_content_blog">Hạ Long: Bí mật và Cuộc sống trong Vịnh - Khám phá và Cập nhật những tin tức hấp dẫn từ điểm đến tuyệt vời này.</string>
    <string name="enterprise_title">Mixivivu - Tour Du thuyền Hạ Long: Kết nối doanh nghiệp, khám phá vẻ đẹp tự nhiên</string>
    <string name="enterprise_intro">Với sự trải nghiệm thực tế, Công ty TNHH Du lịch và Dịch vụ MixiVivu mong muốn đưa du thuyền Hạ Long trở thành một lựa chọn đầu tiên cho doanh nghiệp. Nhiều chương trình du lịch hấp dẫn, đa dạng được kết hợp sẽ đem đến cho quý doanh nghiệp sự hài lòng và thuận tiện. Du thuyền Hạ Long cũng sẽ là một món quà tri ân vô cùng ý nghĩa dành cho nhân viên của quý doanh nghiệp. Bên cạnh đó, du thuyền Hạ Long còn rất phù hợp cho những cuộc hội thảo, hợp tác đầu tư hay giao lưu của quý doanh nghiệp.</string>
    <string name="mixi_phone">0922222222</string>
    <string name="about_me">Giới thiệu về chúng tôi</string>
    <string name="rules">Điều khoản và điều kiện</string>
    <string name="privacy_policy">Chính sách riêng tư</string>
    <string name="user_manual">Hướng dẫn sử dụng</string>
    <string name="mixi_email">info@mixivivu.com</string>
    <string name="warning">Ứng dụng chỉ là một sản phẩm demo, không có mục địch mạo danh doanh nghiệp</string>
    <string name="start">Bắt đầu</string>
    <string-array name="filterCity">
        <item>Bà Rịa</item>
        <item>Bạc Liêu</item>
        <item>Bảo Lộc</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Biên Hòa</item>
        <item>Buôn Ma Thuột</item>
        <item>Cà Mau</item>
        <item>Cam Ranh</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Cao Lãnh</item>
        <item>Cẩm Phả</item>
        <item>Châu Đốc</item>
        <item>Đà Nẵng</item>
        <item>Đà Lạt</item>
        <item>Điện Biên Phủ</item>
        <item>Đông Hà</item>
        <item>Đồng Hới</item>
        <item>Đồng Xoài</item>
        <item>Hà Giang</item>
        <item>Hạ Long</item>
        <item>Hà Nội</item>
        <item>Hà Tiên</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hòa Bình</item>
        <item>Hội An</item>
        <item>Huế</item>
        <item>Hưng Yên</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long Xuyên</item>
        <item>Móng Cái</item>
        <item>Mỹ Tho</item>
        <item>Nam Định</item>
        <item>Nha Trang</item>
        <item>Ninh Bình</item>
        <item>Phan Rang - Tháp Chàm</item>
        <item>Phan Thiết</item>
        <item>Phủ Lý</item>
        <item>Phúc Yên</item>
        <item>Pleiku</item>
        <item>Quảng Ngãi</item>
        <item>Quy Nhơn</item>
        <item>Rạch Giá</item>
        <item>Sa Đéc</item>
        <item>Sầm Sơn</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Sông Công</item>
        <item>Tam Điệp</item>
        <item>Tam Kỳ</item>
        <item>Tân An</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thủ Dầu Một</item>
        <item>Trà Vinh</item>
        <item>Tuy Hòa</item>
        <item>Tuyên Quang</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Uông Bí</item>
        <item>Vị Thanh</item>
        <item>Việt Trì</item>
        <item>Vinh</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Yên</item>
        <item>Vũng Tàu</item>
        <item>Yên Bái</item>
        <item>Thuận An</item>
        <item>Dĩ An</item>
        <item>Phú Quốc</item>
        <item>Ngã Bảy</item>
        <item>Long Khánh</item>
        <item>Hồng Ngự</item>
        <item>Gia Nghĩa</item>
    </string-array>
</resources>