<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderShipActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack">

        <EditText
            style="@style/editText"
            android:id="@+id/inputYourName"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_input1"
            android:hint="@string/input_your_name"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <EditText
            style="@style/editText"
            android:id="@+id/inputNumberPhone"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_input1"
            android:hint="@string/input_number_phone"
            android:inputType="phone"
            android:importantForAutofill="no"/>

        <EditText
            style="@style/editText"
            android:id="@+id/inputYourEmail"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_input1"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>

        <EditText
            style="@style/editText"
            android:id="@+id/inputDate"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_input1"
            android:hint="@string/input_date"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:importantForAutofill="no"/>

        <EditText
            style="@style/editText"
            android:id="@+id/inputContentReview"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_input2"
            android:hint="@string/input_your_request"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:maxLength="255"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewContent"
                    android:text="@string/sum_price"/>

                <TextView
                    style="@style/textViewTitle"
                    android:id="@+id/sumPrice"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/buttonLightBlue"
                android:id="@+id/orderShip"
                android:layout_marginStart="150dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/order"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:srcCompat="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAccessibility="no"/>

    <TextView
        style="@style/textViewTitle"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:background="@drawable/bg_white_title1"
        android:text="@string/order_ship"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>