<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.EnterpriseFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/textViewButton"
                android:id="@+id/numberPhone"
                android:text="@string/mixi_phone"
                app:drawableStartCompat="@drawable/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/textViewButton"
                android:id="@+id/email"
                android:text="@string/mixi_email"
                app:drawableStartCompat="@drawable/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/heading_border"
                app:layout_constraintTop_toBottomOf="@+id/numberPhone"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/textViewButton"
                android:id="@+id/aboutMe"
                android:layout_marginTop="16dp"
                android:text="@string/about_me"
                app:drawableStartCompat="@drawable/about"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                style="@style/textViewButton"
                android:id="@+id/rules"
                android:layout_marginTop="16dp"
                android:text="@string/rules"
                app:drawableStartCompat="@drawable/rules"
                app:layout_constraintTop_toBottomOf="@+id/aboutMe"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                style="@style/textViewButton"
                android:id="@+id/privacyPolicy"
                android:layout_marginTop="16dp"
                android:text="@string/privacy_policy"
                app:drawableStartCompat="@drawable/privacy"
                app:layout_constraintTop_toBottomOf="@+id/rules"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                style="@style/textViewButton"
                android:id="@+id/userManual"
                android:layout_marginTop="16dp"
                android:text="@string/user_manual"
                app:drawableStartCompat="@drawable/user_manual"
                app:layout_constraintTop_toBottomOf="@+id/privacyPolicy"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/bg_light_blue2"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textViewTitle"
            android:layout_marginTop="48dp"
            android:text="@string/enterprise_title"
            android:textAlignment="center"
            android:justificationMode="inter_word"/>

        <TextView
            style="@style/textViewContent"
            android:layout_marginTop="4dp"
            android:text="@string/enterprise_intro"
            android:textAlignment="center"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>