<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.PlaneFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitleSearch"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/videoIntro"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:background="@drawable/bg_white_input3"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/videoIntro">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:background="@drawable/bg_white_input1"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/oneWay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/bg_radio_button"
                        android:text="@string/one_way"
                        android:textSize="16sp"
                        android:textColor="@color/darkBlue"
                        android:padding="8dp"/>

                    <RadioButton
                        android:id="@+id/roundTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:button="@drawable/bg_radio_button"
                        android:text="@string/round_trip"
                        android:textSize="16sp"
                        android:textColor="@color/darkBlue"
                        android:padding="8dp"/>

                </RadioGroup>

                <AutoCompleteTextView
                    style="@style/autoCompleteTextViewLightBlue"
                    android:id="@+id/inputStartingPoint"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/departure"
                    android:hint="@string/starting_point"
                    android:completionThreshold="1"
                    android:maxLines="2"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <AutoCompleteTextView
                    style="@style/autoCompleteTextViewLightBlue"
                    android:id="@+id/inputDestination"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/arrival"
                    android:hint="@string/destination"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <EditText
                    style="@style/editTextLightBlue"
                    android:id="@+id/inputDateGo"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/calendar"
                    android:hint="@string/date_go"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:importantForAutofill="no" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <EditText
                        style="@style/editTextLightBlue"
                        android:id="@+id/inputAdult"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.3"
                        android:hint="@string/adult"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        style="@style/editTextLightBlue"
                        android:id="@+id/inputChildren"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.3"
                        android:hint="@string/children"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <EditText
                        style="@style/editTextLightBlue"
                        android:id="@+id/inputBaby"
                        android:layout_marginStart="4dp"
                        android:layout_weight="0.3"
                        android:hint="@string/baby"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/buttonLightBlue"
                    android:id="@+id/searchPlane"
                    android:layout_marginTop="16dp"
                    android:text="@string/search_plane"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="107dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutSearch"
                app:layout_constraintBottom_toBottomOf="parent">

                <ProgressBar
                    android:id="@+id/progressPlane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="?android:attr/progressBarStyle"/>

                <TextView
                    style="@style/textViewContentBold"
                    android:id="@+id/noData"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/no_plane"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layoutTitleSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_light_blue2"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textViewTitle"
            android:layout_marginTop="48dp"
            android:text="@string/into_plane"/>

        <TextView
            style="@style/textViewContent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/intro_plane1"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>