<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bg_dialog1">

    <TextView
        style="@style/textViewTitle"
        android:id="@+id/confirmBooking"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_booking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/textViewContent"
        android:id="@+id/contentConfirm"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/content_confirm"
        android:textAlignment="center"
        android:lineSpacingExtra="5dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmBooking"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/buttonLightBlue"
        android:id="@+id/completeBooking"
        android:layout_width="200dp"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="24dp"
        android:text="@string/complete_booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentConfirm"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>