<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:padding="1dp"
    android:background="@drawable/bg_light_blue3"
    tools:context=".fragment.EvaluationFragment">

    <LinearLayout
        android:id="@+id/layoutReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@drawable/bg_white3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textViewTitle"
            android:text="@string/evaluation" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/heading_border"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textViewContentBold"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_review_service"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_input1"
            android:orientation="horizontal">

            <TextView
                style="@style/textViewContent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/rating"/>

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/star_rating"/>

        </LinearLayout>

        <EditText
            style="@style/editText"
            android:id="@+id/inputYourName"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_input1"
            android:drawableStart="@drawable/name"
            android:drawableTint="@color/darkBlue"
            android:hint="@string/input_your_name"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <EditText
            style="@style/editText"
            android:id="@+id/inputContentReview"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_selected"
            android:hint="@string/input_your_review"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:maxLength="255"
            android:importantForAutofill="no"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="1dp"
            android:background="@drawable/bg_light_blue1">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/buttonWhite"
                android:id="@+id/sendReviews"
                android:text="@string/send_reviews"
                app:layout_constraintBottom_toBottomOf="parent" />

        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/heading_border"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textViewContentBold"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_reviews_user"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/videoIntro"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:id="@+id/progressEvaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?android:attr/progressBarStyle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listEvaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>